# LSTM

./: LSTM.ipynb  README.md  classes.py  lstm_diagram.drawio  mathfunctions.py
rust_funcs/: Cargo.toml  config.toml  pyproject.toml  tutorial_mudar_biblioteca.txt
rust_funcs/.env/: pyvenv.cfg
rust_funcs/.env/Scripts/: activate  activate.bat
rust_funcs/src/: lib.rs
