[package]
name = "rust_funcs"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_funcs"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3      # Level of optimization.
lto = true         # Link-time optimization.
codegen-units = 1  # Slower compilation but faster code.

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
numpy = "0.20.0"
ndarray = "0.15.6"
num = "0.4.1"


