[package]
name = "rust_funcs"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_funcs"
crate-type = ["cdylib"]

[profile.release]
debug = true
opt-level = 3      # Level of optimization.
lto = true         # Link-time optimization.
codegen-units = 1  # Slower compilation but faster code.

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
numpy = { version = "0.20.0", features = ["nalgebra"]}
rayon = "1.8.0"

# ndarray = "0.15.6"
# num = "0.4.1"

# rust-blas = "0.2.0"
# openblas-src = { version = "0.10.8", features = ["system"] }
# nalgebra = "0.32.3"
# ndarray = { version = "0.15.6", features = ["rayon", "blas"] }
# blas-src = { version = "*", default-features = false, features = ["openblas"] }
# # https://github.com/rust-ndarray/ndarray/issues/586



